syntax = "proto3";

package account;

option go_package = "./account-service/proto";

service AccountService {
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
}

message GetProfileRequest {
    uint32 user_id = 1;
}

message GetProfileResponse {
    uint32 user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    string address = 6;
}

message UpdateProfileRequest {
    uint32 user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    string address = 6;
}

message UpdateProfileResponse {
    string message = 1;
}
